==> masterjoe67/Painter/Library/SD/src/utility/Sd2Card.cpp <==
#include "main.h"
#include "stm32f3xx_hal.h"
#define TRUE  1
#define FALSE 0
#define bool BYTE
#include "Sd2Card.h"

static void spiSend(uint8_t data) {

	while (!__HAL_SPI_GET_FLAG(&HSPI_SDCARD, SPI_FLAG_TXE)) ;
	HAL_SPI_Transmit(&HSPI_SDCARD, &data, 1, SPI_TIMEOUT);

}

static  uint8_t spiRec(void) {

	uint8_t dummy, data;
	dummy = 0xFF;

	while (!__HAL_SPI_GET_FLAG(&HSPI_SDCARD, SPI_FLAG_TXE)) ;
	HAL_SPI_TransmitReceive(&HSPI_SDCARD, &dummy, &data, 1, SPI_TIMEOUT);

	return data;

}

void Sd2Card::chipSelectHigh(void) {
	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_SET);
	HAL_Delay(1);
#ifdef USE_SPI_LIB
  if (chip_select_asserted) {
    chip_select_asserted = 0;
	  //HSPI_SDCARD.
    //SDCARD_SPI.endTransaction();
  }
#endif
}

void Sd2Card::chipSelectLow(void) {
#ifdef USE_SPI_LIB
  if (!chip_select_asserted) {
    chip_select_asserted = 1;
   // SDCARD_SPI.beginTransaction(settings);
  }
#endif
	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_RESET);
	HAL_Delay(1);
}

uint8_t Sd2Card::init(uint8_t sckRateID) {
  errorCode_ = inBlock_ = partialBlockRead_ = type_ = 0;
  //chipSelectPin_ = chipSelectPin;
  // 16-bit init start time allows over a minute
  unsigned int t0 = HAL_GetTick();
  uint32_t arg;

	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_SET);
	HAL_Delay(1);
	



  //SDCARD_SPI.begin();
 // settings = SPISettings(250000, MSBFIRST, SPI_MODE0);


  // must supply min of 74 clock cycles with CS high.

  for (uint8_t i = 0; i < 10; i++) spiSend(0XFF);


  chipSelectLow();

  // command to go idle in SPI mode
  while ((status_ = cardCommand(CMD0, 0)) != R1_IDLE_STATE) {
	  unsigned int d = HAL_GetTick() - t0;
    if (d > SD_INIT_TIMEOUT) {
      error(SD_CARD_ERROR_CMD0);
      goto fail;
    }
  }
  // check SD version
  if ((cardCommand(CMD8, 0x1AA) & R1_ILLEGAL_COMMAND)) {
    type(SD_CARD_TYPE_SD1);
  } else {
    // only need last byte of r7 response
    for (uint8_t i = 0; i < 4; i++) status_ = spiRec();
    if (status_ != 0XAA) {
      error(SD_CARD_ERROR_CMD8);
      goto fail;
    }
    type(SD_CARD_TYPE_SD2);
  }
  // initialize card and send host supports SDHC if SD2
  arg = type() == SD_CARD_TYPE_SD2 ? 0X40000000 : 0;

  while ((status_ = cardAcmd(ACMD41, arg)) != R1_READY_STATE) {
    // check for timeout
    unsigned int d = HAL_GetTick() - t0;
    if (d > SD_INIT_TIMEOUT) {
      error(SD_CARD_ERROR_ACMD41);
      goto fail;
    }
  }
  // if SD2 read OCR register to check for SDHC card
  if (type() == SD_CARD_TYPE_SD2) {
    if (cardCommand(CMD58, 0)) {
      error(SD_CARD_ERROR_CMD58);
      goto fail;
    }
    if ((spiRec() & 0XC0) == 0XC0) type(SD_CARD_TYPE_SDHC);
    // discard rest of ocr - contains allowed voltage range
    for (uint8_t i = 0; i < 3; i++) spiRec();
  }
  chipSelectHigh();


  return setSckRate(sckRateID);


 fail:
  chipSelectHigh();
  return false;
}
