==> ESPboy-edu/ESPboy_SD/src/utility/Sd2Card.cpp <==
#define USE_SPI_LIB
#include <Arduino.h>
#include "Sd2Card.h"
#include "../ESPboyMCP.h"
    #define SDCARD_SPI SPI
  #include <SPI.h>

static void spiSend(uint8_t b) {
  #ifndef USE_SPI_LIB
  SPDR = b;
  while (!(SPSR & (1 << SPIF)))
    ;
  #else
  SDCARD_SPI.transfer(b);
  #endif
}

static uint8_t spiRec(void) {
  #ifndef USE_SPI_LIB
  spiSend(0XFF);
  return SPDR;
  #else
  return SDCARD_SPI.transfer(0xFF);
  #endif
}

uint8_t spiRec(void) {
  uint8_t data = 0;
  cli();
  fastDigitalWrite(SPI_MOSI_PIN, HIGH);

  for (uint8_t i = 0; i < 8; i++) {
    fastDigitalWrite(SPI_SCK_PIN, HIGH);
    nop;
    nop;
    data <<= 1;
    if (fastDigitalRead(SPI_MISO_PIN)) {
      data |= 1;
    }
    fastDigitalWrite(SPI_SCK_PIN, LOW);
  }
  sei();
  return data;
}

void spiSend(uint8_t data) {
  cli();
  for (uint8_t i = 0; i < 8; i++) {
    fastDigitalWrite(SPI_SCK_PIN, LOW);
    fastDigitalWrite(SPI_MOSI_PIN, data & 0X80);
    data <<= 1;
    fastDigitalWrite(SPI_SCK_PIN, HIGH);
  }
  nop;
  nop;
  nop;
  nop;
  fastDigitalWrite(SPI_SCK_PIN, LOW);
  sei();
}

void Sd2Card::chipSelectHigh(void) {
  if (mcp_) {
    mcp_->digitalWrite(chipSelectPin_, HIGH);
  } else {
    digitalWrite(chipSelectPin_, HIGH);
  }

  #ifdef USE_SPI_LIB
  if (chip_select_asserted) {
    chip_select_asserted = 0;
    SDCARD_SPI.endTransaction();
  }
  #endif
}

void Sd2Card::chipSelectLow(void) {
  #ifdef USE_SPI_LIB
  if (!chip_select_asserted) {
    chip_select_asserted = 1;
    SDCARD_SPI.beginTransaction(settings);
  }
  #endif

  if (mcp_) {
    mcp_->digitalWrite(chipSelectPin_, LOW);
  } else {
    digitalWrite(chipSelectPin_, LOW);
  }
}

uint8_t Sd2Card::init(uint8_t sckRateID, uint8_t chipSelectPin, ESPboyMCP *mcp) {
  errorCode_ = inBlock_ = partialBlockRead_ = type_ = 0;
  chipSelectPin_ = chipSelectPin;
  mcp_ = mcp;

  unsigned int t0 = millis();
  uint32_t arg;

  // Настройка режимов пина с учетом MCP
  if (mcp_) {
    mcp_->pinMode(chipSelectPin_, OUTPUT);
    mcp_->digitalWrite(chipSelectPin_, HIGH);
  } else {
    pinMode(chipSelectPin_, OUTPUT);
    digitalWrite(chipSelectPin_, HIGH);
  }

  #ifndef SOFTWARE_SPI
  #ifndef USE_SPI_LIB
  pinMode(SPI_MISO_PIN, INPUT);
  pinMode(SPI_MOSI_PIN, OUTPUT);
  pinMode(SPI_SCK_PIN, OUTPUT);
  pinMode(SS_PIN, OUTPUT);
  digitalWrite(SS_PIN, HIGH);
  SPCR = (1 << SPE) | (1 << MSTR) | (1 << SPR1) | (1 << SPR0);
  SPSR &= ~(1 << SPI2X);
  #else
  SDCARD_SPI.begin();
  settings = SPISettings(250000, MSBFIRST, SPI_MODE0);
  #endif
  #endif

  #ifdef USE_SPI_LIB
  SDCARD_SPI.beginTransaction(settings);
  #endif
  for (uint8_t i = 0; i < 10; i++) {
    spiSend(0XFF);
  }
  #ifdef USE_SPI_LIB
  SDCARD_SPI.endTransaction();
  #endif

  chipSelectLow();

  while ((status_ = cardCommand(CMD0, 0)) != R1_IDLE_STATE) {
    unsigned int d = millis() - t0;
    if (d > SD_INIT_TIMEOUT) {
      error(SD_CARD_ERROR_CMD0);
      goto fail;
    }
  }

  if ((cardCommand(CMD8, 0x1AA) & R1_ILLEGAL_COMMAND)) {
    type(SD_CARD_TYPE_SD1);
  } else {
    for (uint8_t i = 0; i < 4; i++) {
      status_ = spiRec();
    }
    if (status_ != 0XAA) {
      error(SD_CARD_ERROR_CMD8);
      goto fail;
    }
    type(SD_CARD_TYPE_SD2);
  }

  arg = type() == SD_CARD_TYPE_SD2 ? 0X40000000 : 0;

  while ((status_ = cardAcmd(ACMD41, arg)) != R1_READY_STATE) {
    unsigned int d = millis() - t0;
    if (d > SD_INIT_TIMEOUT) {
      error(SD_CARD_ERROR_ACMD41);
      goto fail;
    }
  }

  if (type() == SD_CARD_TYPE_SD2) {
    if (cardCommand(CMD58, 0)) {
      error(SD_CARD_ERROR_CMD58);
      goto fail;
    }
    if ((spiRec() & 0XC0) == 0XC0) {
      type(SD_CARD_TYPE_SDHC);
    }
    for (uint8_t i = 0; i < 3; i++) {
      spiRec();
    }
  }
  chipSelectHigh();

  #ifndef SOFTWARE_SPI
  return setSckRate(sckRateID);
  #else
  return true;
  #endif

fail:
  chipSelectHigh();
  return false;
}
